--- a/public/pages/connector/devices/wizard/find-device.html
+++ b/public/pages/connector/devices/wizard/find-device.html
@@ -4,11 +4,11 @@
         <i class="fa fa-hdd-o fa-stack-1x"></i>
         <i class="fa fa-ban fa-stack-2x text-danger"></i>
       </span>
-      <span>No available Devices</span>
+      <span>No Available Things</span>
     </h3>
 
-    <p class="lead">Could not find any available devices that are online and unclaimed. Please exit and
-        make sure that the devices are accessible within your network.
+    <p class="lead">Could not find any available things that are online and unclaimed. Please exit and
+        make sure that the things are accessible within your network.
     </p>
 </div>
 <div ng-if="model.unclaimedDevices.length">
