--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -16,7 +16,7 @@
     <md-content class="navigation">
       <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.nodewizard.addnode">
         <i class="fa fa-plug fa-lg"></i>
-        <span>Connect</span>
+        <span>Things</span>
       </a>
       <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.design">
         <i class="fa fa-edit fa-lg"></i>
