--- a/public/pages/node-wizard/add-channel/noauth.html
+++ b/public/pages/node-wizard/add-channel/noauth.html
@@ -1,3 +1,3 @@
 <md-button ng-click="activate()" class="md-raised md-primary node-wizard__button">
-  Activate Channel
+  Activate Thing
 </md-button>
