--- a/public/pages/node-wizard/claim.html
+++ b/public/pages/node-wizard/claim.html
@@ -1,5 +1,5 @@
 <md-content class="node-wizard">
-  <h2 class="node-wizard__title">Claim Device ({{controller.device.type}})</h2>
+  <h2 class="node-wizard__title">Claim Thing ({{controller.device.type}})</h2>
 
   <img src="{{controller.device.logo}}" class="node-wizard__logo">
 
