--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -11,7 +11,7 @@
 
 <div class="row" ng-if="device">
   <div class="col-xs-12 col-md-offset-3 col-md-6">
-    <h1>Configure your device</h1>
+    <h1>Configure your thing</h1>
     <form class="form" ng-submit="submit()">
       <div class="form-group" ng-class="{'has-error': errorMessage}">
         <label for="name" class="control-label">Name</label>
