--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -15,7 +15,7 @@
 </div>
 
 <br>
-<h4>Available Devices</h4>
+<h4>Available Things</h4>
 
 <device-picker model="flowNode" devices="otherMatchingFlowNodeTypes">
 </device-picker>
