--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -96,7 +96,7 @@
     <i ng-show="!sidebarIsExpanded" class="fa fa-chevron-left"></i>
     <i ng-show="sidebarIsExpanded" class="fa fa-chevron-right"></i>
   </button>
-  <flow-sidebar expanded-state="sidebarIsExpanded" flow="activeFlow"></flow-sidebar>
+  <flow-sidebar expanded-state="sidebarIsExpanded" flow="activeFlow" debug="debugLines"></flow-sidebar>
 </div>
 
 <style ng-if="sidebarIsExpanded">
