--- a/public/pages/sidebar.html
+++ b/public/pages/sidebar.html
@@ -1,4 +1,4 @@
 <div ng-class="{'sidebar--is-expanded': expandedState}" class="sidebar">
   <flow-inspector flow="flow"></flow-inspector>
-  <collection-browser flow="flow"></collection-browser>
+  <collection-browser flow="flow" debug="debug"></collection-browser>
 </div>
