--- a/public/pages/flow-debug-browser.html
+++ b/public/pages/flow-debug-browser.html
@@ -3,15 +3,14 @@
     <pre>{{ flow | json }}</pre>
   </div>
   <div ng-if="!viewSource">
-    <h5 ng-if="flow.selectedFlowNode.name">Selected Node: {{ flow.selectedFlowNode.name }}</h5>
     <ul class="flow-browser-debug">
-      <li ng-repeat="debug in debugLines | filter : {$: flow.selectedFlowNode.id} | filter:filterQuery">
-      	<small>{{ debug.date | date: 'shortDate'}} {{ debug.date | date: 'mediumTime'}} - {{ debug.message.name }}</small>
-        <prism code="debug.message"></prism>
+      <li ng-repeat="bug in debug | filter : {$: flow.selectedFlowNode.id} | filter:filterQuery">
+      	<small>{{ bug.date | date: 'shortDate'}} {{ bug.date | date: 'mediumTime'}} - {{ bug.message.name }}</small>
+        <prism code="bug.message"></prism>
       </li>
     </ul>
   </div>
-  <div ng-if="!debugLines.length" class="sidebar__alert">
+  <div ng-if="!debug.length && !viewSource" class="sidebar__alert">
     <h3 class="sidebar__alert-title">No Debug Output</h3>
     <p class="sidebar__alert-body">
       You can see the raw output of your nodes here. To activate debugging, add the debug node, or toggle debugging in the node inspector.
