--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -3,7 +3,7 @@
     <div class="md-toolbar-tools">
       <div class="sidebar__pane-title">Node Inspector</div>
       <span flex></span>
-      <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button>
+      <md-button class="sidebar__pane-node--delete" ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button>
     </div>
   </header>
 
