--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -12,7 +12,7 @@
 <md-content flex>
   <total-activity-graph class="total-activity-graph" line-a="totalMessagesSentOverTime" line-b="totalMessagesReceivedOverTime"></total-activity-graph>
 
-  <div layout="row" layout-align="space-around center" style="margin: auto; min-height: 60px">
+  <div layout="row" layout-align="space-around center" style="margin: 0px 5px; min-height: 60px">
       <div layout="row" layout-align="center">
         <form class="form">
           <div class="form-group" flex="95" style="margin-bottom: 0">
