reorg form so endpoint isn't below the fold

--- a/public/pages/node_forms/channel_form.html
+++ b/public/pages/node_forms/channel_form.html
@@ -3,6 +3,6 @@
   <input ng-model="flowNode.name">
 </md-input-container>
 
-<md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Message</md-switch>
-
 <endpoint-selector ng-model="flowNode"></endpoint-selector>
+
+<md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Use Incoming Message</md-switch>
