--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,21 +1,9 @@
-<div draggable="true" class="flow-editor" drop="addNode($data, $event)">
-  <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
-    <defs>
-      <pattern id="small-blue-grid" width="8" height="8" patternUnits="userSpaceOnUse">
-        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="#1E4F95" stroke-width="0.25"/>
-      </pattern>
-      <pattern id="blue-grid" width="80" height="80" patternUnits="userSpaceOnUse">
-        <rect width="80" height="80" fill="url(#small-blue-grid)"/>
-        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="#1E4F95" stroke-width="0.5"/>
-      </pattern>
-      <pattern id="small-red-grid" width="8" height="8" patternUnits="userSpaceOnUse">
-        <path d="M 8 0 L 0 0 0 8" fill="none" stroke="#FF0000" stroke-width="0.25"/>
-      </pattern>
-      <pattern id="red-grid" width="80" height="80" patternUnits="userSpaceOnUse">
-        <rect width="80" height="80" fill="url(#small-red-grid)"/>
-        <path d="M 80 0 L 0 0 0 80" fill="none" stroke="#FF0000" stroke-width="0.5"/>
-      </pattern>
-    </defs>
-    <g class="flow-render-area"></g>
-  </svg>
+<div class="flow-editor" drop="addNode($data, $event)">
+  <svg
+    draggable="true"
+    class="flow-editor-workspace"
+    xmlns="http://www.w3.org/2000/svg"
+    version="1.1"
+    pointer-events="all"
+  />
 </div>
