--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,6 +1,5 @@
-<div class="flow-editor" drop="addNode($data, $event)">
+<div draggable="true" class="flow-editor" drop="addNode($data, $event)">
   <svg
-    draggable="true"
     class="flow-editor-workspace"
     xmlns="http://www.w3.org/2000/svg"
     version="1.1"
