side almost fixed... mind blown!

--- a/public/pages/flow-detail-editor.html
+++ b/public/pages/flow-detail-editor.html
@@ -1,63 +1,56 @@
-<div class="sidebar__pane-content">
-  <header class="sidebar__toolbar sidebar__toolbar--header">
-    <div class="md-toolbar-tools">
-      <div class="sidebar__pane-title">Flow Inspector</div>
-    </div>
-  </header>
-
-  <main class="sidebar__pane-body">
-    <div class="sidebar__section sidebar__pane-form">
-      <div class="sidebar__section-header">
-        <h5 class="sidebar__section-title">Flow Information</h5>
-        <button ng-click="hideInfo = !hideInfo" ng-class="{'sidebar__section-toggle-btn': !hideInfo}" class="sidebar__button" aria-label="Show/Hide Flow Information">
-          <span ng-hide="hideInfo">Hide</span>
-          <span ng-hide="!hideInfo">Show</span>
-        </button>
-      </div>
-      <div class="sidebar__section-body" ng-hide="hideInfo">
-        <md-input-container>
-          <label>Name</label>
-          <input ng-model="flow.name">
-        </md-input-container>
-
-        <md-input-container>
-          <label>Description</label>
-          <textarea ng-model="flow.description" columns="1" md-maxlength="300"></textarea>
-        </md-input-container>
-      </div>
+<div class="Sidebar-pane-content">
+  <div class="sidebar__section sidebar__pane-form">
+    <div class="sidebar__section-header">
+      <h5 class="sidebar__section-title">Flow Information</h5>
+      <button ng-click="hideInfo = !hideInfo" ng-class="{'sidebar__section-toggle-btn': !hideInfo}" class="sidebar__button" aria-label="Show/Hide Flow Information">
+        <span ng-hide="hideInfo">Hide</span>
+        <span ng-hide="!hideInfo">Show</span>
+      </button>
     </div>
 
-    <md-divider class="sidebar__section-divider"></md-divider>
+    <div class="sidebar__section-body" ng-hide="hideInfo">
+      <md-input-container>
+        <label>Name</label>
+        <input ng-model="flow.name">
+      </md-input-container>
 
-    <div class="sidebar__section sidebar__section-nodes">
-      <div class="sidebar__section-header">
-        <h5 class="sidebar__section-title">Nodes In Flow</h5>
-        <button ng-click="showNodes = !showNodes" ng-class="{'sidebar__section-toggle-btn': showNodes}" class="sidebar__button" aria-label="Show/Hide Node List">
-          <span ng-show="showNodes">Hide</span>
-          <span ng-show="!showNodes">Show</span>
-        </button>
-      </div>
+      <md-input-container>
+        <label>Description</label>
+        <textarea ng-model="flow.description" columns="1" md-maxlength="300"></textarea>
+      </md-input-container>
+    </div>
+  </div>
 
-      <div ng-show="showNodes" class="sidebar__section-body">
-        <div ng-show="!flow.nodes.length" class="sidebar__alert">
-          <random-robot title="You have no nodes in your flow."></random-robot>
-        </div>
+  <md-divider class="sidebar__section-divider"></md-divider>
 
-        <ul class="nodes-in-flow">
-          <li ng-repeat="node in flow.nodes | orderBy: 'name' track by node.id" ng-mouseenter="showDelete=!showDelete" ng-mouseleave="showDelete=!showDelete" class="nodes-in-flow__item">
-            <button ng-click="$emit('flow-node-type-selected', node);" class="sidebar__button node-in-flow__button">
-              <img ng-src="{{node.logo}}" alt="{{node.class || node.type}}" class="sidebar__pane-node-thumbnail"/>
-              <span class="node-in-flow__node--name truncate">{{node.name}}</span>
-            </button>
-
-            <button ng-click="$emit('flow-node-delete', node);" ng-show="showDelete" aria-label="Delete Node" class="sidebar__button node-in-flow__button--delete">
-              <i class="fa fa-trash fa-lg"></i>
-            </button>
-          </li>
-        </ul>
-      </div>
+  <div class="sidebar__section sidebar__section-nodes">
+    <div class="sidebar__section-header">
+      <h5 class="sidebar__section-title">Nodes In Flow</h5>
+      <button ng-click="showNodes = !showNodes" ng-class="{'sidebar__section-toggle-btn': showNodes}" class="sidebar__button" aria-label="Show/Hide Node List">
+        <span ng-show="showNodes">Hide</span>
+        <span ng-show="!showNodes">Show</span>
+      </button>
     </div>
 
-    <md-divider ng-hide="showNodes" class="sidebar__section-divider"></md-divider>
-  </main>
+    <div ng-show="showNodes" class="sidebar__section-body">
+      <div ng-show="!flow.nodes.length" class="sidebar__alert">
+        <random-robot title="You have no nodes in your flow."></random-robot>
+      </div>
+
+      <ul class="nodes-in-flow">
+        <li ng-repeat="node in flow.nodes | orderBy: 'name' track by node.id" ng-mouseenter="showDelete=!showDelete" ng-mouseleave="showDelete=!showDelete" class="nodes-in-flow__item">
+          <button ng-click="$emit('flow-node-type-selected', node);" class="sidebar__button node-in-flow__button">
+            <img ng-src="{{node.logo}}" alt="{{node.class || node.type}}" class="sidebar__pane-node-thumbnail"/>
+            <span class="node-in-flow__node--name truncate">{{node.name}}</span>
+          </button>
+
+          <button ng-click="$emit('flow-node-delete', node);" ng-show="showDelete" aria-label="Delete Node" class="sidebar__button node-in-flow__button--delete">
+            <i class="fa fa-trash fa-lg"></i>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <md-divider ng-hide="showNodes" class="sidebar__section-divider"></md-divider>
 </div>
