--- a/public/pages/sidebar.html
+++ b/public/pages/sidebar.html
@@ -1,5 +1,4 @@
-<div ng-class="{'sidebar--is-expanded': expandedState}" class="sidebar">
-  <!-- <flow-inspector flow="flow"></flow-inspector> -->
-  <collection-browser flow="flow" debug="debug"></collection-browser>
+<div data-ng-init="expandedState=true" ng-class="{'sidebar--is-expanded': expandedState}" class="sidebar">
+  <flow-inspector flow="flow"></flow-inspector>
   <collection-browser flow="flow" debug="debug"></collection-browser>
 </div>
