--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -1,18 +1,10 @@
-<div class="sidebar__pane-content">
-  <header class="sidebar__toolbar sidebar__toolbar--header">
-    <div class="md-toolbar-tools">
-      <div class="sidebar__pane-title">Setup Thing</div>
-    </div>
-  </header>
-
-  <main class="sidebar__pane-body">
-    <div class="sidebar__flow-node-setup">
-      <img height="100" ng-src="{{nodeType.logo}}">
-      <h3 class="text-center sidebar__setup-title">This thing requires setup</h3>
-      <p class="text-center">
-        Click Setup to start configuring this thing
-      </p>
-      <md-button ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="md-raised md-primary sidebar__setup-button">Setup</md-button>
-    </div>
-  </main>
+<div class="Sidebar-pane-content">
+  <div class="sidebar__flow-node-setup">
+    <img height="100" ng-src="{{nodeType.logo}}">
+    <h3 class="text-center sidebar__setup-title">This thing requires setup</h3>
+    <p class="text-center">
+      Click Setup to start configuring this thing
+    </p>
+    <md-button ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="md-raised md-primary sidebar__setup-button">Setup</md-button>
+  </div>
 </div>
