--- a/public/pages/sidebar.html
+++ b/public/pages/sidebar.html
@@ -1,4 +1,4 @@
 <div data-ng-init="expandedState=true" ng-class="{'sidebar--is-expanded': expandedState}" class="sidebar">
   <flow-inspector flow="flow"></flow-inspector>
-  <collection-browser flow="flow" debug="debug"></collection-browser>
+  <utility-inspector flow="flow" debug="debug"></utility-inspector>
 </div>
