--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -1,10 +1,10 @@
 <div class="Sidebar-pane-content">
-  <div class="sidebar__flow-node-setup">
+  <div class="Sidebar-flow-node-setup">
     <img height="100" ng-src="{{nodeType.logo}}">
-    <h3 class="text-center sidebar__setup-title">This thing requires setup</h3>
+    <h3 class="text-center Sidebar-setup-title">This thing requires setup</h3>
     <p class="text-center">
       Click Setup to start configuring this thing
     </p>
-    <md-button ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="md-raised md-primary sidebar__setup-button">Setup</md-button>
+    <md-button ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="md-raised md-primary Sidebar-setup-button">Setup</md-button>
   </div>
 </div>
