--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -75,7 +75,7 @@
       </md-button>
     </div>
   </div>
-  <button class="sidebar__expand-button sidebar__toolbar-button" ng-class="{'sidebar__expand-button--closed': !sidebarIsExpanded}" ng-click="toggleSidebarView()">
+  <button class="Sidebar-expand-button Sidebar-toolbar-button" ng-class="{'Sidebar-expand-button--closed': !sidebarIsExpanded}" ng-click="toggleSidebarView()">
     <i ng-show="!sidebarIsExpanded" class="fa fa-chevron-left"></i>
     <i ng-show="sidebarIsExpanded" class="fa fa-chevron-right"></i>
   </button>
