--- a/public/pages/flow-debug-browser.html
+++ b/public/pages/flow-debug-browser.html
@@ -10,9 +10,9 @@
       </li>
     </ul>
   </div>
-  <div ng-if="!debug.length && !viewSource" class="sidebar__alert">
-    <h3 class="sidebar__alert-title">No Debug Output</h3>
-    <p class="sidebar__alert-body">
+  <div ng-if="!debug.length && !viewSource" class="Sidebar-alert">
+    <h3 class="Sidebar-alert-title">No Debug Output</h3>
+    <p class="Sidebar-alert-body">
       You can see the raw output of your nodes here. To activate debugging, add the debug node, or toggle debugging in the node inspector.
     </p>
   </div>
