--- a/public/pages/node-wizard/add-subdevice/index.html
+++ b/public/pages/node-wizard/add-subdevice/index.html
@@ -1,3 +1,15 @@
+<md-content class="interior__wrapper" autoscroll="false">
+  <header class="interior__header">
+    <div class="interior">
+      <div class="breadcrumbs">
+        <a ui-sref="material.nodewizard.addnode" class="breadcrumb-link">Things</a>
+        <i class="fa fa-angle-double-right fa-lg"></i>
+        <span class="breadcrumb-link current">Add {{nodeType.name}}</span>
+      </div>
+    </div>
+  </header>
+</md-content>
+
 <h2 class="text-center">Add a {{nodeType.name}}</h2>
 
 <div class="node-wizard-logo-container">
