--- a/public/pages/device-detail.html
+++ b/public/pages/device-detail.html
@@ -3,13 +3,23 @@
     <div flex layout="row">
       <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
-        Device
+        {{controller.device.name}}
       </a>
     </div>
   </h2>
 </md-toolbar>
+<md-content class="interior__wrapper" autoscroll="false">
+  <header class="interior__header">
+    <div class="interior">
+      <div class="breadcrumbs">
+        <a ui-sref="material.configure" class="breadcrumb-link">Connected Things</a>
+        <i class="fa fa-angle-double-right fa-lg"></i>
+        <span class="breadcrumb-link current">Edit {{controller.device.name}}</span>
+      </div>
+    </div>
+  </header>
 
-<md-content class="device-details">
+<md-content class="interior device-details">
   <div class="device-header">
     <div class="logo-header">
       <img src="{{controller.device.logo}}" class="device-logo" ng-class="{faded: !controller.device.online}">
