--- a/public/pages/node-wizard/add-channel/index.html
+++ b/public/pages/node-wizard/add-channel/index.html
@@ -1,3 +1,14 @@
+<md-content class="interior__wrapper" autoscroll="false">
+  <header class="interior__header">
+    <div class="interior">
+      <div class="breadcrumbs">
+        <a ui-sref="material.nodewizard.addnode" class="breadcrumb-link">Things</a>
+        <i class="fa fa-angle-double-right fa-lg"></i>
+        <span class="breadcrumb-link current">Add {{nodeType.name}}</span>
+      </div>
+    </div>
+  </header>
+</md-content>
 <main class="node-wizard">
   <h2 class="node-wizard__title">Add {{nodeType.name}}</h2>
   <img src="{{nodeType.logo}}" alt="{{nodeType.name}}" class="node-wizard__logo">
