--- a/public/angular/directives/utility-inspector/utility-inspector.html
+++ b/public/angular/directives/utility-inspector/utility-inspector.html
@@ -36,23 +36,14 @@
         <i class="blu-loading__icon fa fa-spinner fa-5x fa-spin"></i>
       </div>
     </div>
+
+    <h3 class="node-collection-no-matches" ng-show="noThings && !loading">
+      No matches for "{{thingNameFilter}}"
+    </h3>
+
     <div ng-show="tab.state == 'things' && !loading" class="Sidebar-pane-content">
-      <header class="blu-bordered-header" ng-hide="filterQuery">
-        <h4 class="blu-bordered-header-label">
-          Connected Things
-        </h4>
-        <hr class="blu-bordered-header-divider">
-      </header>
-
-      <node-collection
-        flow="flow"
-        nodes="nodes.configured"
-        filter-query="filterQuery"
-        view-style="collectionViewStyle">
-      </node-collection>
-
-      <div ng-repeat="(category, things) in nodes.available">
-        <header class="blu-bordered-header" ng-if="!filterQuery">
+      <div ng-repeat="(category, things) in thingsByCategory">
+        <header class="blu-bordered-header" ng-if="!thingNameFilter">
           <h4 class="blu-bordered-header-label">
             {{category}}
           </h4>
@@ -62,31 +53,15 @@
         <node-collection
           flow="flow"
           nodes="things"
-          filter-query="filterQuery"
           view-style="collectionViewStyle">
         </node-collection>
       </div>
-
-      <header class="blu-bordered-header" ng-hide="filterQuery">
-        <h4 class="blu-bordered-header-label">
-          Flows
-        </h4>
-        <hr class="blu-bordered-header-divider">
-      </header>
-
-      <node-collection
-        flow="flow"
-        nodes="flowNodes"
-        filter-query="filterQuery"
-        view-style="collectionViewStyle">
-      </node-collection>
     </div>
 
     <node-collection
       ng-show="tab.state == 'tools'"
       flow="flow"
       nodes="nodes.operators"
-      filter-query="filterQuery"
       view-style="collectionViewStyle"
       class="Sidebar-pane-content">
     </node-collection>
@@ -130,7 +105,7 @@
       <div class="lookup  Sidebar-pane-lookup">
         <i class="lookup__icon fa fa-search fa-lg"></i>
         <input
-          ng-model="filterQuery"
+          ng-model="thingNameFilter"
           placeholder="Filter {{tab.state}}..."
           type="search"
           class="lookup__input">
